# release.py

./: .gitignore  .k  .version  README.md  pyproject.toml  release.py
.github/release/: go.py  pyproject.toml  release.py
.github/workflows/: release.yaml
doc/: Makefile  README.in.md  include  release.yaml
